i hate checkstyle